--- a/images/css/style.css
+++ b/images/css/style.css
@@ -59,11 +59,11 @@ body{
     }
     
     .logoImagen{
-        display:block;
-        float: left;
-        height: 140px;
-        padding-left: 35px;
-        }
+      display:block;
+      float: left;
+      height: 150px;
+      padding-left: 35px;
+      }
  
 /*
  * Logo
@@ -128,62 +128,49 @@ html {
     scroll-behavior: smooth;
     }
 
-/*
- header{
-    width: 100%;
-    height: 72px;
-    background-color:transparent;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: 100;
+ /* cabeza movil (Draggable DIV Element) ------------------------------------------------------------------------*/
 
- } 
-.contenedor{
-    width: 90%;
-    margin: auto;
-
-  
+ #dragg {
+  position: absolute;
+  top: -5px;
+  left: 352px;
+  z-index: 9;
+  text-align: center;
+  /*border: 1px solid #d3d3d3;*/
 }
 
-.tituloPrincipal{
-  font-family: 'Merienda', cursive;
-    float: left;
-    color: white;
-    font-size: 40px;
-
-
+#draggheader {
+  padding: 10px;
+  cursor: move;
+  z-index: 10;
+  color: #fff;
 }
 
-header .contenedor{
-    display: table;
+.draggImg {
+  height: 130px;
 }
 
-section{
-    width: 100%;
-    margin-bottom: 25px;
-}
 
-#Bienvenido{
-    text-align: center;
-}
-*/
+/*-------------------------------------------------------------------------------*/   
 #blog{
     text-align: center;
 }
 
 footer .contenedor{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    padding-bottom: 25px;
-    background-color:#ff4500e0;;
-    color:black;
-    font-family: Arial, Helvetica, sans-serif;
-    width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  background-color: #4d4d4d;
+  color: white;
+  font-family: Arial, Helvetica, sans-serif;
+  width: 100%;
 }
 
-
+.imgFooter{
+height: 23px;
+}
   
 .sociales{
     width: 100%;
